# filterLibrary

./: .autotools  .cproject  .project  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac  info_autoconf
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
filterlib_test/: Makefile.am  Makefile.in  filterlib_test.c  matLabFilter.h
include/: Makefile.am  Makefile.in  libFilter.h
libFilter/: Makefile.am  Makefile.in  libFilter.c  libFilterFIR.c  libFilterIIR.c
